saves/test/demo_full_20240802_193545/always_case2/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp always_case2_tb.v always_case2.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
always_case2_tb.v:43: $finish called at 15000 (1ps)

iverilog cmd 2 error:

